parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt
Rule 2     program -> program stmt
Rule 3     stmt -> CLASS ID LPAREN ID RPAREN COLON block
Rule 4     stmt -> CLASS ID COLON block
Rule 5     stmt -> DEF ID LPAREN params RPAREN COLON block
Rule 6     stmt -> DEF ID LPAREN RPAREN COLON block
Rule 7     stmt -> IMPORT import_path
Rule 8     stmt -> FROM ID IMPORT ID
Rule 9     stmt -> RETURN expr
Rule 10    stmt -> RETURN
Rule 11    stmt -> PASS
Rule 12    stmt -> IF expr COLON block ELSE COLON block
Rule 13    stmt -> IF expr COLON block
Rule 14    stmt -> WHILE expr COLON block
Rule 15    stmt -> target EQ_OP expr
Rule 16    stmt -> expr
Rule 17    block -> NEWLINE program
Rule 18    params -> ID
Rule 19    params -> params COMMA ID
Rule 20    import_path -> ID
Rule 21    import_path -> import_path DOT ID
Rule 22    expr -> term
Rule 23    expr -> expr PLUS term
Rule 24    expr -> expr MINUS term
Rule 25    expr -> expr TIMES term
Rule 26    expr -> expr DIVIDE term
Rule 27    expr -> expr EQ term
Rule 28    expr -> expr NE term
Rule 29    expr -> expr LT term
Rule 30    expr -> expr GT term
Rule 31    expr -> expr AND term
Rule 32    expr -> expr OR term
Rule 33    term -> ID
Rule 34    term -> NUM
Rule 35    term -> STR
Rule 36    term -> LPAREN expr RPAREN
Rule 37    term -> NOT term
Rule 38    term -> MINUS term
Rule 39    term -> ID call_chain
Rule 40    call_chain -> DOT ID
Rule 41    call_chain -> LPAREN args RPAREN
Rule 42    call_chain -> call_chain DOT ID
Rule 43    call_chain -> call_chain LPAREN args RPAREN
Rule 44    args -> expr
Rule 45    args -> args COMMA expr
Rule 46    target -> ID
Rule 47    target -> ID call_chain

Terminals, with rules where they appear

AND                  : 31
CLASS                : 3 4
COLON                : 3 4 5 6 12 12 13 14
COMMA                : 19 45
DEF                  : 5 6
DIVIDE               : 26
DOT                  : 21 40 42
ELSE                 : 12
EQ                   : 27
EQ_OP                : 15
FROM                 : 8
GT                   : 30
ID                   : 3 3 4 5 6 8 8 18 19 20 21 33 39 40 42 46 47
IF                   : 12 13
IMPORT               : 7 8
LPAREN               : 3 5 6 36 41 43
LT                   : 29
MINUS                : 24 38
NE                   : 28
NEWLINE              : 17
NOT                  : 37
NUM                  : 34
OR                   : 32
PASS                 : 11
PLUS                 : 23
RETURN               : 9 10
RPAREN               : 3 5 6 36 41 43
STR                  : 35
TIMES                : 25
WHILE                : 14
error                : 

Nonterminals, with rules where they appear

args                 : 41 43 45
block                : 3 4 5 6 12 12 13 14
call_chain           : 39 42 43 47
expr                 : 9 12 13 14 15 16 23 24 25 26 27 28 29 30 31 32 36 44 45
import_path          : 7 21
params               : 5 19
program              : 2 17 0
stmt                 : 1 2
target               : 15
term                 : 22 23 24 25 26 27 28 29 30 31 32 37 38

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt
    (2) program -> . program stmt
    (3) stmt -> . CLASS ID LPAREN ID RPAREN COLON block
    (4) stmt -> . CLASS ID COLON block
    (5) stmt -> . DEF ID LPAREN params RPAREN COLON block
    (6) stmt -> . DEF ID LPAREN RPAREN COLON block
    (7) stmt -> . IMPORT import_path
    (8) stmt -> . FROM ID IMPORT ID
    (9) stmt -> . RETURN expr
    (10) stmt -> . RETURN
    (11) stmt -> . PASS
    (12) stmt -> . IF expr COLON block ELSE COLON block
    (13) stmt -> . IF expr COLON block
    (14) stmt -> . WHILE expr COLON block
    (15) stmt -> . target EQ_OP expr
    (16) stmt -> . expr
    (46) target -> . ID
    (47) target -> . ID call_chain
    (22) expr -> . term
    (23) expr -> . expr PLUS term
    (24) expr -> . expr MINUS term
    (25) expr -> . expr TIMES term
    (26) expr -> . expr DIVIDE term
    (27) expr -> . expr EQ term
    (28) expr -> . expr NE term
    (29) expr -> . expr LT term
    (30) expr -> . expr GT term
    (31) expr -> . expr AND term
    (32) expr -> . expr OR term
    (33) term -> . ID
    (34) term -> . NUM
    (35) term -> . STR
    (36) term -> . LPAREN expr RPAREN
    (37) term -> . NOT term
    (38) term -> . MINUS term
    (39) term -> . ID call_chain

    CLASS           shift and go to state 3
    DEF             shift and go to state 6
    IMPORT          shift and go to state 7
    FROM            shift and go to state 8
    RETURN          shift and go to state 9
    PASS            shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    ID              shift and go to state 4
    NUM             shift and go to state 17
    STR             shift and go to state 18
    LPAREN          shift and go to state 5
    NOT             shift and go to state 19
    MINUS           shift and go to state 16

    program                        shift and go to state 1
    stmt                           shift and go to state 2
    expr                           shift and go to state 10
    target                         shift and go to state 14
    term                           shift and go to state 15

state 1

    (0) S' -> program .
    (2) program -> program . stmt
    (3) stmt -> . CLASS ID LPAREN ID RPAREN COLON block
    (4) stmt -> . CLASS ID COLON block
    (5) stmt -> . DEF ID LPAREN params RPAREN COLON block
    (6) stmt -> . DEF ID LPAREN RPAREN COLON block
    (7) stmt -> . IMPORT import_path
    (8) stmt -> . FROM ID IMPORT ID
    (9) stmt -> . RETURN expr
    (10) stmt -> . RETURN
    (11) stmt -> . PASS
    (12) stmt -> . IF expr COLON block ELSE COLON block
    (13) stmt -> . IF expr COLON block
    (14) stmt -> . WHILE expr COLON block
    (15) stmt -> . target EQ_OP expr
    (16) stmt -> . expr
    (46) target -> . ID
    (47) target -> . ID call_chain
    (22) expr -> . term
    (23) expr -> . expr PLUS term
    (24) expr -> . expr MINUS term
    (25) expr -> . expr TIMES term
    (26) expr -> . expr DIVIDE term
    (27) expr -> . expr EQ term
    (28) expr -> . expr NE term
    (29) expr -> . expr LT term
    (30) expr -> . expr GT term
    (31) expr -> . expr AND term
    (32) expr -> . expr OR term
    (33) term -> . ID
    (34) term -> . NUM
    (35) term -> . STR
    (36) term -> . LPAREN expr RPAREN
    (37) term -> . NOT term
    (38) term -> . MINUS term
    (39) term -> . ID call_chain

    CLASS           shift and go to state 3
    DEF             shift and go to state 6
    IMPORT          shift and go to state 7
    FROM            shift and go to state 8
    RETURN          shift and go to state 9
    PASS            shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    ID              shift and go to state 4
    NUM             shift and go to state 17
    STR             shift and go to state 18
    LPAREN          shift and go to state 5
    NOT             shift and go to state 19
    MINUS           shift and go to state 16

    stmt                           shift and go to state 20
    expr                           shift and go to state 10
    target                         shift and go to state 14
    term                           shift and go to state 15

state 2

    (1) program -> stmt .

    CLASS           reduce using rule 1 (program -> stmt .)
    DEF             reduce using rule 1 (program -> stmt .)
    IMPORT          reduce using rule 1 (program -> stmt .)
    FROM            reduce using rule 1 (program -> stmt .)
    RETURN          reduce using rule 1 (program -> stmt .)
    PASS            reduce using rule 1 (program -> stmt .)
    IF              reduce using rule 1 (program -> stmt .)
    WHILE           reduce using rule 1 (program -> stmt .)
    ID              reduce using rule 1 (program -> stmt .)
    NUM             reduce using rule 1 (program -> stmt .)
    STR             reduce using rule 1 (program -> stmt .)
    LPAREN          reduce using rule 1 (program -> stmt .)
    NOT             reduce using rule 1 (program -> stmt .)
    MINUS           reduce using rule 1 (program -> stmt .)
    $end            reduce using rule 1 (program -> stmt .)
    ELSE            reduce using rule 1 (program -> stmt .)


state 3

    (3) stmt -> CLASS . ID LPAREN ID RPAREN COLON block
    (4) stmt -> CLASS . ID COLON block

    ID              shift and go to state 21


state 4

    (46) target -> ID .
    (47) target -> ID . call_chain
    (33) term -> ID .
    (39) term -> ID . call_chain
    (40) call_chain -> . DOT ID
    (41) call_chain -> . LPAREN args RPAREN
    (42) call_chain -> . call_chain DOT ID
    (43) call_chain -> . call_chain LPAREN args RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    EQ_OP           reduce using rule 46 (target -> ID .)
    PLUS            reduce using rule 33 (term -> ID .)
    MINUS           reduce using rule 33 (term -> ID .)
    TIMES           reduce using rule 33 (term -> ID .)
    DIVIDE          reduce using rule 33 (term -> ID .)
    EQ              reduce using rule 33 (term -> ID .)
    NE              reduce using rule 33 (term -> ID .)
    LT              reduce using rule 33 (term -> ID .)
    GT              reduce using rule 33 (term -> ID .)
    AND             reduce using rule 33 (term -> ID .)
    OR              reduce using rule 33 (term -> ID .)
    CLASS           reduce using rule 33 (term -> ID .)
    DEF             reduce using rule 33 (term -> ID .)
    IMPORT          reduce using rule 33 (term -> ID .)
    FROM            reduce using rule 33 (term -> ID .)
    RETURN          reduce using rule 33 (term -> ID .)
    PASS            reduce using rule 33 (term -> ID .)
    IF              reduce using rule 33 (term -> ID .)
    WHILE           reduce using rule 33 (term -> ID .)
    ID              reduce using rule 33 (term -> ID .)
    NUM             reduce using rule 33 (term -> ID .)
    STR             reduce using rule 33 (term -> ID .)
    NOT             reduce using rule 33 (term -> ID .)
    $end            reduce using rule 33 (term -> ID .)
    ELSE            reduce using rule 33 (term -> ID .)
    DOT             shift and go to state 23
    LPAREN          shift and go to state 24

  ! LPAREN          [ reduce using rule 33 (term -> ID .) ]

    call_chain                     shift and go to state 22

state 5

    (36) term -> LPAREN . expr RPAREN
    (22) expr -> . term
    (23) expr -> . expr PLUS term
    (24) expr -> . expr MINUS term
    (25) expr -> . expr TIMES term
    (26) expr -> . expr DIVIDE term
    (27) expr -> . expr EQ term
    (28) expr -> . expr NE term
    (29) expr -> . expr LT term
    (30) expr -> . expr GT term
    (31) expr -> . expr AND term
    (32) expr -> . expr OR term
    (33) term -> . ID
    (34) term -> . NUM
    (35) term -> . STR
    (36) term -> . LPAREN expr RPAREN
    (37) term -> . NOT term
    (38) term -> . MINUS term
    (39) term -> . ID call_chain

    ID              shift and go to state 26
    NUM             shift and go to state 17
    STR             shift and go to state 18
    LPAREN          shift and go to state 5
    NOT             shift and go to state 19
    MINUS           shift and go to state 16

    expr                           shift and go to state 25
    term                           shift and go to state 15

state 6

    (5) stmt -> DEF . ID LPAREN params RPAREN COLON block
    (6) stmt -> DEF . ID LPAREN RPAREN COLON block

    ID              shift and go to state 27


state 7

    (7) stmt -> IMPORT . import_path
    (20) import_path -> . ID
    (21) import_path -> . import_path DOT ID

    ID              shift and go to state 29

    import_path                    shift and go to state 28

state 8

    (8) stmt -> FROM . ID IMPORT ID

    ID              shift and go to state 30


state 9

    (9) stmt -> RETURN . expr
    (10) stmt -> RETURN .
    (22) expr -> . term
    (23) expr -> . expr PLUS term
    (24) expr -> . expr MINUS term
    (25) expr -> . expr TIMES term
    (26) expr -> . expr DIVIDE term
    (27) expr -> . expr EQ term
    (28) expr -> . expr NE term
    (29) expr -> . expr LT term
    (30) expr -> . expr GT term
    (31) expr -> . expr AND term
    (32) expr -> . expr OR term
    (33) term -> . ID
    (34) term -> . NUM
    (35) term -> . STR
    (36) term -> . LPAREN expr RPAREN
    (37) term -> . NOT term
    (38) term -> . MINUS term
    (39) term -> . ID call_chain

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for STR resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    CLASS           reduce using rule 10 (stmt -> RETURN .)
    DEF             reduce using rule 10 (stmt -> RETURN .)
    IMPORT          reduce using rule 10 (stmt -> RETURN .)
    FROM            reduce using rule 10 (stmt -> RETURN .)
    RETURN          reduce using rule 10 (stmt -> RETURN .)
    PASS            reduce using rule 10 (stmt -> RETURN .)
    IF              reduce using rule 10 (stmt -> RETURN .)
    WHILE           reduce using rule 10 (stmt -> RETURN .)
    $end            reduce using rule 10 (stmt -> RETURN .)
    ELSE            reduce using rule 10 (stmt -> RETURN .)
    ID              shift and go to state 26
    NUM             shift and go to state 17
    STR             shift and go to state 18
    LPAREN          shift and go to state 5
    NOT             shift and go to state 19
    MINUS           shift and go to state 16

  ! ID              [ reduce using rule 10 (stmt -> RETURN .) ]
  ! NUM             [ reduce using rule 10 (stmt -> RETURN .) ]
  ! STR             [ reduce using rule 10 (stmt -> RETURN .) ]
  ! LPAREN          [ reduce using rule 10 (stmt -> RETURN .) ]
  ! NOT             [ reduce using rule 10 (stmt -> RETURN .) ]
  ! MINUS           [ reduce using rule 10 (stmt -> RETURN .) ]

    expr                           shift and go to state 31
    term                           shift and go to state 15

state 10

    (16) stmt -> expr .
    (23) expr -> expr . PLUS term
    (24) expr -> expr . MINUS term
    (25) expr -> expr . TIMES term
    (26) expr -> expr . DIVIDE term
    (27) expr -> expr . EQ term
    (28) expr -> expr . NE term
    (29) expr -> expr . LT term
    (30) expr -> expr . GT term
    (31) expr -> expr . AND term
    (32) expr -> expr . OR term

  ! shift/reduce conflict for MINUS resolved as shift
    CLASS           reduce using rule 16 (stmt -> expr .)
    DEF             reduce using rule 16 (stmt -> expr .)
    IMPORT          reduce using rule 16 (stmt -> expr .)
    FROM            reduce using rule 16 (stmt -> expr .)
    RETURN          reduce using rule 16 (stmt -> expr .)
    PASS            reduce using rule 16 (stmt -> expr .)
    IF              reduce using rule 16 (stmt -> expr .)
    WHILE           reduce using rule 16 (stmt -> expr .)
    ID              reduce using rule 16 (stmt -> expr .)
    NUM             reduce using rule 16 (stmt -> expr .)
    STR             reduce using rule 16 (stmt -> expr .)
    LPAREN          reduce using rule 16 (stmt -> expr .)
    NOT             reduce using rule 16 (stmt -> expr .)
    $end            reduce using rule 16 (stmt -> expr .)
    ELSE            reduce using rule 16 (stmt -> expr .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    TIMES           shift and go to state 34
    DIVIDE          shift and go to state 35
    EQ              shift and go to state 36
    NE              shift and go to state 37
    LT              shift and go to state 38
    GT              shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41

  ! MINUS           [ reduce using rule 16 (stmt -> expr .) ]


state 11

    (11) stmt -> PASS .

    CLASS           reduce using rule 11 (stmt -> PASS .)
    DEF             reduce using rule 11 (stmt -> PASS .)
    IMPORT          reduce using rule 11 (stmt -> PASS .)
    FROM            reduce using rule 11 (stmt -> PASS .)
    RETURN          reduce using rule 11 (stmt -> PASS .)
    PASS            reduce using rule 11 (stmt -> PASS .)
    IF              reduce using rule 11 (stmt -> PASS .)
    WHILE           reduce using rule 11 (stmt -> PASS .)
    ID              reduce using rule 11 (stmt -> PASS .)
    NUM             reduce using rule 11 (stmt -> PASS .)
    STR             reduce using rule 11 (stmt -> PASS .)
    LPAREN          reduce using rule 11 (stmt -> PASS .)
    NOT             reduce using rule 11 (stmt -> PASS .)
    MINUS           reduce using rule 11 (stmt -> PASS .)
    $end            reduce using rule 11 (stmt -> PASS .)
    ELSE            reduce using rule 11 (stmt -> PASS .)


state 12

    (12) stmt -> IF . expr COLON block ELSE COLON block
    (13) stmt -> IF . expr COLON block
    (22) expr -> . term
    (23) expr -> . expr PLUS term
    (24) expr -> . expr MINUS term
    (25) expr -> . expr TIMES term
    (26) expr -> . expr DIVIDE term
    (27) expr -> . expr EQ term
    (28) expr -> . expr NE term
    (29) expr -> . expr LT term
    (30) expr -> . expr GT term
    (31) expr -> . expr AND term
    (32) expr -> . expr OR term
    (33) term -> . ID
    (34) term -> . NUM
    (35) term -> . STR
    (36) term -> . LPAREN expr RPAREN
    (37) term -> . NOT term
    (38) term -> . MINUS term
    (39) term -> . ID call_chain

    ID              shift and go to state 26
    NUM             shift and go to state 17
    STR             shift and go to state 18
    LPAREN          shift and go to state 5
    NOT             shift and go to state 19
    MINUS           shift and go to state 16

    expr                           shift and go to state 42
    term                           shift and go to state 15

state 13

    (14) stmt -> WHILE . expr COLON block
    (22) expr -> . term
    (23) expr -> . expr PLUS term
    (24) expr -> . expr MINUS term
    (25) expr -> . expr TIMES term
    (26) expr -> . expr DIVIDE term
    (27) expr -> . expr EQ term
    (28) expr -> . expr NE term
    (29) expr -> . expr LT term
    (30) expr -> . expr GT term
    (31) expr -> . expr AND term
    (32) expr -> . expr OR term
    (33) term -> . ID
    (34) term -> . NUM
    (35) term -> . STR
    (36) term -> . LPAREN expr RPAREN
    (37) term -> . NOT term
    (38) term -> . MINUS term
    (39) term -> . ID call_chain

    ID              shift and go to state 26
    NUM             shift and go to state 17
    STR             shift and go to state 18
    LPAREN          shift and go to state 5
    NOT             shift and go to state 19
    MINUS           shift and go to state 16

    expr                           shift and go to state 43
    term                           shift and go to state 15

state 14

    (15) stmt -> target . EQ_OP expr

    EQ_OP           shift and go to state 44


state 15

    (22) expr -> term .

    PLUS            reduce using rule 22 (expr -> term .)
    MINUS           reduce using rule 22 (expr -> term .)
    TIMES           reduce using rule 22 (expr -> term .)
    DIVIDE          reduce using rule 22 (expr -> term .)
    EQ              reduce using rule 22 (expr -> term .)
    NE              reduce using rule 22 (expr -> term .)
    LT              reduce using rule 22 (expr -> term .)
    GT              reduce using rule 22 (expr -> term .)
    AND             reduce using rule 22 (expr -> term .)
    OR              reduce using rule 22 (expr -> term .)
    CLASS           reduce using rule 22 (expr -> term .)
    DEF             reduce using rule 22 (expr -> term .)
    IMPORT          reduce using rule 22 (expr -> term .)
    FROM            reduce using rule 22 (expr -> term .)
    RETURN          reduce using rule 22 (expr -> term .)
    PASS            reduce using rule 22 (expr -> term .)
    IF              reduce using rule 22 (expr -> term .)
    WHILE           reduce using rule 22 (expr -> term .)
    ID              reduce using rule 22 (expr -> term .)
    NUM             reduce using rule 22 (expr -> term .)
    STR             reduce using rule 22 (expr -> term .)
    LPAREN          reduce using rule 22 (expr -> term .)
    NOT             reduce using rule 22 (expr -> term .)
    $end            reduce using rule 22 (expr -> term .)
    RPAREN          reduce using rule 22 (expr -> term .)
    ELSE            reduce using rule 22 (expr -> term .)
    COLON           reduce using rule 22 (expr -> term .)
    COMMA           reduce using rule 22 (expr -> term .)


state 16

    (38) term -> MINUS . term
    (33) term -> . ID
    (34) term -> . NUM
    (35) term -> . STR
    (36) term -> . LPAREN expr RPAREN
    (37) term -> . NOT term
    (38) term -> . MINUS term
    (39) term -> . ID call_chain

    ID              shift and go to state 26
    NUM             shift and go to state 17
    STR             shift and go to state 18
    LPAREN          shift and go to state 5
    NOT             shift and go to state 19
    MINUS           shift and go to state 16

    term                           shift and go to state 45

state 17

    (34) term -> NUM .

    PLUS            reduce using rule 34 (term -> NUM .)
    MINUS           reduce using rule 34 (term -> NUM .)
    TIMES           reduce using rule 34 (term -> NUM .)
    DIVIDE          reduce using rule 34 (term -> NUM .)
    EQ              reduce using rule 34 (term -> NUM .)
    NE              reduce using rule 34 (term -> NUM .)
    LT              reduce using rule 34 (term -> NUM .)
    GT              reduce using rule 34 (term -> NUM .)
    AND             reduce using rule 34 (term -> NUM .)
    OR              reduce using rule 34 (term -> NUM .)
    CLASS           reduce using rule 34 (term -> NUM .)
    DEF             reduce using rule 34 (term -> NUM .)
    IMPORT          reduce using rule 34 (term -> NUM .)
    FROM            reduce using rule 34 (term -> NUM .)
    RETURN          reduce using rule 34 (term -> NUM .)
    PASS            reduce using rule 34 (term -> NUM .)
    IF              reduce using rule 34 (term -> NUM .)
    WHILE           reduce using rule 34 (term -> NUM .)
    ID              reduce using rule 34 (term -> NUM .)
    NUM             reduce using rule 34 (term -> NUM .)
    STR             reduce using rule 34 (term -> NUM .)
    LPAREN          reduce using rule 34 (term -> NUM .)
    NOT             reduce using rule 34 (term -> NUM .)
    $end            reduce using rule 34 (term -> NUM .)
    RPAREN          reduce using rule 34 (term -> NUM .)
    ELSE            reduce using rule 34 (term -> NUM .)
    COLON           reduce using rule 34 (term -> NUM .)
    COMMA           reduce using rule 34 (term -> NUM .)


state 18

    (35) term -> STR .

    PLUS            reduce using rule 35 (term -> STR .)
    MINUS           reduce using rule 35 (term -> STR .)
    TIMES           reduce using rule 35 (term -> STR .)
    DIVIDE          reduce using rule 35 (term -> STR .)
    EQ              reduce using rule 35 (term -> STR .)
    NE              reduce using rule 35 (term -> STR .)
    LT              reduce using rule 35 (term -> STR .)
    GT              reduce using rule 35 (term -> STR .)
    AND             reduce using rule 35 (term -> STR .)
    OR              reduce using rule 35 (term -> STR .)
    CLASS           reduce using rule 35 (term -> STR .)
    DEF             reduce using rule 35 (term -> STR .)
    IMPORT          reduce using rule 35 (term -> STR .)
    FROM            reduce using rule 35 (term -> STR .)
    RETURN          reduce using rule 35 (term -> STR .)
    PASS            reduce using rule 35 (term -> STR .)
    IF              reduce using rule 35 (term -> STR .)
    WHILE           reduce using rule 35 (term -> STR .)
    ID              reduce using rule 35 (term -> STR .)
    NUM             reduce using rule 35 (term -> STR .)
    STR             reduce using rule 35 (term -> STR .)
    LPAREN          reduce using rule 35 (term -> STR .)
    NOT             reduce using rule 35 (term -> STR .)
    $end            reduce using rule 35 (term -> STR .)
    RPAREN          reduce using rule 35 (term -> STR .)
    ELSE            reduce using rule 35 (term -> STR .)
    COLON           reduce using rule 35 (term -> STR .)
    COMMA           reduce using rule 35 (term -> STR .)


state 19

    (37) term -> NOT . term
    (33) term -> . ID
    (34) term -> . NUM
    (35) term -> . STR
    (36) term -> . LPAREN expr RPAREN
    (37) term -> . NOT term
    (38) term -> . MINUS term
    (39) term -> . ID call_chain

    ID              shift and go to state 26
    NUM             shift and go to state 17
    STR             shift and go to state 18
    LPAREN          shift and go to state 5
    NOT             shift and go to state 19
    MINUS           shift and go to state 16

    term                           shift and go to state 46

state 20

    (2) program -> program stmt .

    CLASS           reduce using rule 2 (program -> program stmt .)
    DEF             reduce using rule 2 (program -> program stmt .)
    IMPORT          reduce using rule 2 (program -> program stmt .)
    FROM            reduce using rule 2 (program -> program stmt .)
    RETURN          reduce using rule 2 (program -> program stmt .)
    PASS            reduce using rule 2 (program -> program stmt .)
    IF              reduce using rule 2 (program -> program stmt .)
    WHILE           reduce using rule 2 (program -> program stmt .)
    ID              reduce using rule 2 (program -> program stmt .)
    NUM             reduce using rule 2 (program -> program stmt .)
    STR             reduce using rule 2 (program -> program stmt .)
    LPAREN          reduce using rule 2 (program -> program stmt .)
    NOT             reduce using rule 2 (program -> program stmt .)
    MINUS           reduce using rule 2 (program -> program stmt .)
    $end            reduce using rule 2 (program -> program stmt .)
    ELSE            reduce using rule 2 (program -> program stmt .)


state 21

    (3) stmt -> CLASS ID . LPAREN ID RPAREN COLON block
    (4) stmt -> CLASS ID . COLON block

    LPAREN          shift and go to state 47
    COLON           shift and go to state 48


state 22

    (47) target -> ID call_chain .
    (39) term -> ID call_chain .
    (42) call_chain -> call_chain . DOT ID
    (43) call_chain -> call_chain . LPAREN args RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    EQ_OP           reduce using rule 47 (target -> ID call_chain .)
    PLUS            reduce using rule 39 (term -> ID call_chain .)
    MINUS           reduce using rule 39 (term -> ID call_chain .)
    TIMES           reduce using rule 39 (term -> ID call_chain .)
    DIVIDE          reduce using rule 39 (term -> ID call_chain .)
    EQ              reduce using rule 39 (term -> ID call_chain .)
    NE              reduce using rule 39 (term -> ID call_chain .)
    LT              reduce using rule 39 (term -> ID call_chain .)
    GT              reduce using rule 39 (term -> ID call_chain .)
    AND             reduce using rule 39 (term -> ID call_chain .)
    OR              reduce using rule 39 (term -> ID call_chain .)
    CLASS           reduce using rule 39 (term -> ID call_chain .)
    DEF             reduce using rule 39 (term -> ID call_chain .)
    IMPORT          reduce using rule 39 (term -> ID call_chain .)
    FROM            reduce using rule 39 (term -> ID call_chain .)
    RETURN          reduce using rule 39 (term -> ID call_chain .)
    PASS            reduce using rule 39 (term -> ID call_chain .)
    IF              reduce using rule 39 (term -> ID call_chain .)
    WHILE           reduce using rule 39 (term -> ID call_chain .)
    ID              reduce using rule 39 (term -> ID call_chain .)
    NUM             reduce using rule 39 (term -> ID call_chain .)
    STR             reduce using rule 39 (term -> ID call_chain .)
    NOT             reduce using rule 39 (term -> ID call_chain .)
    $end            reduce using rule 39 (term -> ID call_chain .)
    ELSE            reduce using rule 39 (term -> ID call_chain .)
    DOT             shift and go to state 49
    LPAREN          shift and go to state 50

  ! LPAREN          [ reduce using rule 39 (term -> ID call_chain .) ]


state 23

    (40) call_chain -> DOT . ID

    ID              shift and go to state 51


state 24

    (41) call_chain -> LPAREN . args RPAREN
    (44) args -> . expr
    (45) args -> . args COMMA expr
    (22) expr -> . term
    (23) expr -> . expr PLUS term
    (24) expr -> . expr MINUS term
    (25) expr -> . expr TIMES term
    (26) expr -> . expr DIVIDE term
    (27) expr -> . expr EQ term
    (28) expr -> . expr NE term
    (29) expr -> . expr LT term
    (30) expr -> . expr GT term
    (31) expr -> . expr AND term
    (32) expr -> . expr OR term
    (33) term -> . ID
    (34) term -> . NUM
    (35) term -> . STR
    (36) term -> . LPAREN expr RPAREN
    (37) term -> . NOT term
    (38) term -> . MINUS term
    (39) term -> . ID call_chain

    ID              shift and go to state 26
    NUM             shift and go to state 17
    STR             shift and go to state 18
    LPAREN          shift and go to state 5
    NOT             shift and go to state 19
    MINUS           shift and go to state 16

    args                           shift and go to state 52
